Add in call of duty knives (just throwing knives and tomahawk), extinguisher, chisel, hammers, machetes, and start on magic wands.

--- a/src/main/resources/assets/grimtools/lang/en_US.lang
+++ b/src/main/resources/assets/grimtools/lang/en_US.lang
@@ -53,6 +53,31 @@ item.stone_milk_bucket.name=Stone Milk Bucket
 item.golden_milk_bucket.name=Golden Milk Bucket
 item.diamond_milk_bucket.name=Diamond Milk Bucket
 item.obsidian_milk_bucket.name=Obsidian Milk Bucket
+item.throwing_knife.name=Throwing Knives
+item.tomahawk.name=Tomahawk
+item.grip.name=Grip
+item.diamond_chisel.name=Diamond Chisel
+item.iron_chisel.name=Iron Chisel
+item.gold_ore_item.name=Gold Ore
+item.iron_ore_item.name=Iron Ore
+item.extinguisher.name=Fire Extinguisher
+item.wood_hammer.name=Wood Hammer
+item.stone_hammer.name=Stone Hammer
+item.iron_hammer.name=Iron Hammer
+item.gold_hammer.name=Gold Hammer
+item.diamond_hammer.name=Diamond Hammer
+item.machete_gold.name=Gold Machete
+item.machete_iron.name=Iron Machete
+item.machete_diamond.name=Diamond Machete
+item.machete_stone.name=Stone Machete
+item.machete_wood.name=Wood Machete
+item.machete_slime.name=Slime Machete
+item.building_wand.name=Building Wand
+item.breaking_wand.name=Breaking Wand
+item.mining_wand.name=Mining Wand
+item.reinforced_building_wand.name=Reinforced Building Wand
+item.reinforced_breaking_wand.name=Reinforced Breaking Wand
+item.reinforced_mining_wand.name=Reinforced Mining Wand
 
 #================= INSTRUCTION MANUAL =================#
 grim.manual.grimtools.modinfo=Adds a bunch of weapons and useful tools.
@@ -109,3 +134,75 @@ grim.manual.grimtools.subsection.obsidian.page.recipe.title=Recipe / Info
 grim.manual.grimtools.subsection.milk=Milk Buckets
 grim.manual.grimtools.subsection.milk.page.recipe=Milk buckets can be crafted in any combination of buckets to create cake. You can also drink milk buckets to clear potion effects. Milk buckets do stack and will react accordingly to drinking and when crafted. 
 grim.manual.grimtools.subsection.milk.page.recipe.title=Recipes / Info
+grim.manual.grimtools.subsection.knife=Throwing Knives
+grim.manual.grimtools.subsection.knife.page.knife=This is how you craft the throwing knives. To use simply right click while holding the item and when it hits should do quite a bit of damage.
+grim.manual.grimtools.subsection.knife.page.knife.title=Recipe
+grim.manual.grimtools.subsection.tomahawk=Tomahawk
+grim.manual.grimtools.subsection.tomahawk.page.tomahawk=This is how to craft the tomahawk. Like using the throwing knives just right click while holding it and it will be thrown.
+grim.manual.grimtools.subsection.tomahawk.page.tomahawk.title=Recipe
+grim.manual.grimtools.subsection.grip=Grip
+grim.manual.grimtools.subsection.grip.page.grip=All of the different weapons require you to craft a grip.
+grim.manual.grimtools.subsection.grip.page.grip.title=Recipe
+grim.manual.grimtools.subsection.chisels=Chisels
+grim.manual.grimtools.subsection.chisels.page.chisels=You can craft either an iron or diamond chisel which both can work on all the ores in the vanilla game. The iron chisel has 32 uses while the diamond chisel has 128.
+grim.manual.grimtools.subsection.chisels.page.chisels.title=Types
+grim.manual.grimtools.subsection.ores=Ores
+grim.manual.grimtools.subsection.ores.page.ore=To stop unlimited amounts of gold and iron instead of receiving the blocks back when using the chisel you item ore versions which smelt to get the same outcome.
+grim.manual.grimtools.subsection.ores.page.ore.title=Furnace
+grim.manual.grimtools.subsection.extinguisher=Extinguisher
+grim.manual.grimtools.subsection.extinguisher.page.extinguisher=The extinguisher can be helpful in saving your house from lava or fire. The extinguisher has one use and on right click it extinguishes the player, and removes all fire and lava around you.
+grim.manual.grimtools.subsection.extinguisher.page.extinguisher.title=Recipe
+grim.manual.grimtools.subsection.extinguisher.page.refill=After using the extinguisher you may want to refill it so a simple recipe can help you out with that.
+grim.manual.grimtools.subsection.extinguisher.page.refill.title=Refilling
+grim.manual.grimtools.subsection.hammers=Hammers
+grim.manual.grimtools.subsection.hammers.page.recipes=Hammers are new tools that on use will destroy the block in one hit but not drop the items. So if you have a huge mountain of dirt to get rid of this will be very helpful.
+grim.manual.grimtools.subsection.hammers.page.recipes.title=Recipes
+grim.manual.grimtools.subsection.machetes=Machetes
+grim.manual.grimtools.subsection.machetes.page.base=Their are machetes with the base items that regular Minecraft tools use. Machetes are used to hurt mobs but also can help when breaking leaves, webs, cloth, vines, and cactus.
+grim.manual.grimtools.subsection.machetes.page.base.title=Base
+grim.manual.grimtools.subsection.machetes.page.slime=Another machete added is the Slime Machete. THe slime machete is like the other machetes and has the same stats as the Iron Machete. But, the slime machete also can knock back enemies (slightly random which direction that they knock back).
+grim.manual.grimtools.subsection.machetes.page.slime.title=Slime
+grim.manual.grimtools.subsection.info=Information
+grim.manual.grimtools.subsection.info.page.info=This mod adds 3 types of Magic Wands (Building Wands, Mining Wands, and Breaking Wands).<br>Each wand type has its own special modes that do special things based on key combinations. To see a wands modes press the Left_Control by default. It will display the mode and the key combination needed, all keys displayed are configurable.<br>To get started right click a block and click on another block with the key combination pressed and the mode chosen should happen. Their are also a few other things in the mods config that change different things.<br>Go experiment and have fun! :D
+grim.manual.grimtools.subsection.info.page.info.title=How To Use
+grim.manual.grimtools.subsection.regular=Regular Wands
+grim.manual.grimtools.subsection.regular.page.recipes=These are the 3 types of regular wands available. The Breaking Wand has 15 uses and has 3 different modes. The Mining Wand has 15 uses and has 4 different modes. The Building Wand has 30 uses and 4 different modes.
+grim.manual.grimtools.subsection.regular.page.recipes.title=Recipes
+grim.manual.grimtools.subsection.reinforced=Reinforced Wands
+grim.manual.grimtools.subsection.reinforced.page.recipes=These are the 3 types of reinforced wands available. The Reinforced Breaking Wand has 120 uses and has 3 different modes. The Mining Wand has 120 uses and has 4 different modes. The Building Wand has 200 uses and 7 different modes.
+grim.manual.grimtools.subsection.reinforced.page.recipes.title=Recipes
+
+#Help Messages
+help.build.key1=FULL box
+help.build.key2=EMPTY room
+help.build.key3=FRAME (good for fence)
+help.build.key1.3=TORCHES (anti-monster)
+help.rbuild.key1.2=building WATER
+help.rbuild.key2.3=filling CAVES with stone
+help.rbuild.key1.2.3=building LAVA
+help.break.key1=break all but ORES
+help.break.key2=break ALL
+help.break.key3=remove LIQUIDS (lava, water) and PLANTS
+help.mine.key1=mine ALL
+help.mine.key2=mine only DIRT, SAND, GRAVEL etc.
+help.mine.key3=mine only WOOD
+help.mine.key1.2=mining ORES from surface
+result.wand.fill= blocks filled up with stone.
+result.wand.mine=No ores found.
+error.wand.nocave=No caves were found.
+error.wand.nowork=No work to do.
+error.wand.nostart=You didn't select the starting block!
+error.wand.cantbuild=Can't build this block!
+error.wand.toofar=That's too far!
+error.wand.toofewitems=You don't have enough items
+error.wand.toofewitems.needed=needed
+error.wand.toofewitems.have=you have
+error.wand.toomany=Too many blocks to dig
+error.wand.toomany.limit=limit
+error.wand.notsamecorner=You can't do this! Corner blocks must be the same.
+error.wand.cantfillcave=You need REINFORCED wand for cave filling!
+error.wand.cantfilllava=You need REINFORCED wand for lava filling!
+error.wand.cantfillwater=You need REINFORCED wand for water filling!
+error.wand.toofewlava=You don't have enough lava buckets.
+error.wand.toofewwater=You need two buckets of water.
+error.wand.toomanytodig=Too many blocks to dig
