Add in spears, ultimate fist and mask, as well as some changes to projectile rendering

--- a/src/main/resources/assets/grimtools/lang/en_US.lang
+++ b/src/main/resources/assets/grimtools/lang/en_US.lang
@@ -2,6 +2,26 @@
 grim.creative.grimtools=Grim Tools
 tooltip.buckets.empty=Empty
 tooltip.buckets.contains=Contains
+mask.blaze=Blaze
+mask.cave_spider=Cave Spider
+mask.chicken=Chicken
+mask.cow=Cow
+mask.creeper=Creeper
+mask.empty=Empty
+mask.enderman=Ender
+mask.ghast=Ghast
+mask.magmacube=Magma
+mask.pig=Pig
+mask.sheep=Sheep
+mask.mooshroom=Moo Shroom
+mask.skeleton=Skeleton
+mask.slime=Slime
+mask.spider=Spider
+mask.squid=Squid
+mask.villager=Villager
+mask.wolf=Wolf
+mask.zombie=Zombie
+mask.zombie_pigman=Zombie Pig
 
 #================= BLOCKS =================#
 tile.black_diamond_ore.name=Black Diamond Ore
@@ -98,9 +118,33 @@ item.advanced_ray_gun.name=Advanced Raygun
 item.dark_iron_ingot.name=Dark Iron Ingot
 item.sling_shot.name=Slingshot
 item.sling_pellet.name=Slingshot Pellet
+item.spear.name=Throwing Spear
+item.iron_spear.name=Iron Spear
+item.diamond_spear.name=Diamond Spear
+item.explosive_spear.name=Explosive Spear
+item.fire_spear.name=Fire Spear
+item.slime_spear.name=Slime Spear
+item.light_spear.name=Light Spear
+item.lightning_spear.name=Lightning Spear
+item.ultimate_fist.name=Ultimate Fist
+item.mask.name=Mask
 
 #================= INSTRUCTION MANUAL =================#
 grim.manual.grimtools.modinfo=Adds a bunch of weapons and useful tools.
+grim.manual.grimtools.subsection.masks=Masks
+grim.manual.grimtools.subsection.masks.page.empty=To get started creating mob masks you will need an empty mask. The empty mask can be worn.
+grim.manual.grimtools.subsection.masks.page.empty.title=Empty Mask
+grim.manual.grimtools.subsection.masks.page.mobs=These are all mob masks. All of these masks can be worn as helmet and can be used to scare people.
+grim.manual.grimtools.subsection.masks.page.mobs.title=Mob Masks
+grim.manual.grimtools.subsection.ultimate=Ultimate Fist
+grim.manual.grimtools.subsection.ultimate.page.fist=The Ultimate Fist is a weapon and a tool that is very over-powered. The damage that it deals is configurable but starts out being able to one hit an Ender Dragon. The tool aspect by default is able to insta-mine blocks but, like the weapon part how fast it mines is also configurable.
+grim.manual.grimtools.subsection.ultimate.page.fist.title=Recipe
+grim.manual.grimtools.subsection.basic=Basic Spears
+grim.manual.grimtools.subsection.basic.page.recipes=The 3 basic types of spears are Flint, Iron, and Diamond Spears. They don't do anything beyond damaging entities by either throwing or hit entities.
+grim.manual.grimtools.subsection.basic.page.recipes.title=Recipes
+grim.manual.grimtools.subsection.special=Special Spears
+grim.manual.grimtools.subsection.special.page.recipes=The 5 types of special spears are Explosive, Fire, Slime, Light, and Lightning Spears. The Explosive, Fire, Light, and Lightning Spears cause a special effect where they land. The Explosive causes an explosion, the Fire sets on fire, the Light places a torch, and the Lightning causes a lightning strike. The Slime Spear bounces where it lands.
+grim.manual.grimtools.subsection.special.page.recipes.title=Recipes
 grim.manual.grimtools.subsection.sling=Slingshot
 grim.manual.grimtools.subsection.sling.page.pellets=The ammo used with the Slingshot are Slingshot Pellets. They are really easy to craft and can be made out of different materials.
 grim.manual.grimtools.subsection.sling.page.pellets.title=Pellets
