Remove milk bowl

--- a/src/main/resources/assets/grimcuisine/lang/en_US.lang
+++ b/src/main/resources/assets/grimcuisine/lang/en_US.lang
@@ -39,7 +39,6 @@ item.healthpack_super.name=Super Health Pack
 item.healthpack.name=Health Pack
 item.cheese.name=Cheese
 item.butter.name=Butter
-item.milk_bowl.name=Bowl of Milk
 item.eggs_cooked.name=Cooked Eggs
 item.eggs_unmixed.name=Unmixed Eggs
 item.eggs_mixed.name=Mixed Eggs
@@ -87,8 +86,6 @@ grim.manual.grimcuisine.subsection.health.page.recipes.title=Recipes
 grim.manual.grimcuisine.subsection.info=Getting Started
 grim.manual.grimcuisine.subsection.info.page.info=This mod adds more food options to your game with the ability to craft butter and cheese (shown below). Using the butter churn which is an instant change and the cheese maker which has different stages (shown below). To get started you will need a bowl of milk (next page).
 grim.manual.grimcuisine.subsection.info.page.info.title=Info
-grim.manual.grimcuisine.subsection.info.page.bowl=You will need a bowl of milk to move on to any other parts of this mod. You can use the one that this mod adds or the one that chocolate mod adds but both share the same recipe so no matter what either bowl should work interchangeably with each other.
-grim.manual.grimcuisine.subsection.info.page.bowl.title=Bowl of Milk
 grim.manual.grimcuisine.subsection.butter=Butter
 grim.manual.grimcuisine.subsection.butter.page.churn=The butter churn is very simple to use. Simply right click it with a bowl of milk in your hand and then punch to get cheese back out. Then eat cheese!
 grim.manual.grimcuisine.subsection.butter.page.churn.title=Butter Churn Recipe
@@ -111,9 +108,7 @@ grim.manual.grimcuisine.subsection.cocoa.page.fruit.title=Cocoa Dust
 grim.manual.grimcuisine.subsection.cocoa.page.dye=Using cocoa dust you can also turn them into cocoa beans from vanilla by combining two of them.
 grim.manual.grimcuisine.subsection.cocoa.page.dye.title=Dye
 grim.manual.grimcuisine.subsection.bowlchoc=Chocolate
-grim.manual.grimcuisine.subsection.bowlchoc.page.bowlmilk=You will need to craft a bowl of milk if you would like to get to the chocolatey treats later on. You can also use the bowl of milk from Dairy Craft as a substitute for the recipes here and you can use this bowl of milk to be used on the blocks of Dairy Craft.
-grim.manual.grimcuisine.subsection.bowlchoc.page.bowlmilk.title=Milk Bowl
-grim.manual.grimcuisine.subsection.bowlchoc.page.bowlChoc=You can now create a bowl of chocolate milk. This will need to be heated up to be used. 
+grim.manual.grimcuisine.subsection.bowlchoc.page.bowlChoc=You can now create a bowl of chocolate milk. This will need to be heated up to be used. You can use any milk bucket.
 grim.manual.grimcuisine.subsection.bowlchoc.page.bowlChoc.title=Chocolate Bowl
 grim.manual.grimcuisine.subsection.bowlchoc.page.bowlChocHot=To heat up the chocolate milk it will need to be put in a furnace. Now that it is heated up it will be able to be used in the chocolate mould and also in some other recipes.
 grim.manual.grimcuisine.subsection.bowlchoc.page.bowlChocHot.title=Hot Chocolate Bowl
