Update instruction manual

--- a/src/main/resources/assets/grimcore/lang/en_US.lang
+++ b/src/main/resources/assets/grimcore/lang/en_US.lang
@@ -9,7 +9,9 @@ grim.manual.title=Grim Instruction Manual
 grim.manual.shapeless=Shapeless Recipe
 grim.manual.oredictionary=Ore Dictionary
 grim.manual.header=Click on a mod to learn more about it.
-grim.manual.grimcore.modinfo=This is the base mod that all of Grim's Mods require. This mod only implements 1 item and that is the item you are using.
+grim.manual.grimcore.modinfo=This is the base mod that all of Grim's Parts require. This mod only implements 1 item and that is this item.
 grim.manual.grimcore.subsection.im=Instruction Manual
-grim.manual.grimcore.subsection.im.page.instructionmanual=The instruction manual is used to get all kinds of information about other mods by Grim3212. Every mod by Grim has a section in the Instruction Manual.
+grim.manual.grimcore.subsection.im.page.howto=The instruction manual contains many different pages on the different parts that you currently have installed. <br>Recipe pages will, as the name suggests, display recipes. If a recipe is shapeless the output will be <f>a<f>lgreen<f>0<f>r and if a recipe contains ore dictionary items they will be <f>e<f>lyellow<f>0<f>r. <br>There are also furnace pages, info pages (like this one), and info and image pages. A mod can also add there own custom page types too.
+grim.manual.grimcore.subsection.im.page.howto.title=Users Guide
+grim.manual.grimcore.subsection.im.page.instructionmanual=The instruction manual is used to get all kinds of information about modded items and blocks.
 grim.manual.grimcore.subsection.im.page.instructionmanual.title=Recipe
